Fix review findings

--- a/src/main/resources/locales/de/plugins.json
+++ b/src/main/resources/locales/de/plugins.json
@@ -19,7 +19,7 @@
         "removeAddress": "Adresse entfernen",
         "invalidMail": "Falsches Email Adressformat",
         "updated": "Die Konfiguration wurde erfolgreich aktualisiert",
-        "submit": "Konfiguration aktualisieren"
+        "submit": "Speichern"
       }
     }
   },
