Harmonize translation keys and headlines

--- a/src/main/resources/locales/en/plugins.json
+++ b/src/main/resources/locales/en/plugins.json
@@ -12,10 +12,10 @@
       "resubmit": "Resubmit",
       "clear": "Clear",
       "config": {
-        "title": "Resubmit configuration",
+        "title": "Resubmit Configuration",
         "description": "Configuration related to the resubmit function",
         "address": "Email Address",
-        "addAddress": "Add address",
+        "addAddress": "Add Address",
         "removeAddress": "Remove address",
         "invalidMail": "Invalid email address format",
         "updated": "Successfully updated resubmit configuration",
